# fzpart

./: Cargo.toml  README.md
src/: gpt.rs  lib.rs  mbr.rs
