[package]
name = "fzpart"
description = "A Rust library to interact with GPT / MBR partition tables."
license-file = "LICENSE"
authors = ["Sacha Dupuydauby <sdupuydauby@proton.me>"]
keywords = ["mbr", "gpt", "partition", "boot"]
categories = ["filesystem", "no-std"]
repository = "https://github.com/sleiderr/fzpart"
version = "0.2.0"
edition = "2021"

[dependencies]
crc32fast = { version = "1.4.2", default-features = false }
static_assertions = "1.1.0"
uuid = { version = "1.11", features = ["v4", "fast-rng"], optional = true }

[dev-dependencies]
base64 = "0.22"

[features]
std = ["alloc", "crc32fast/std", "dep:uuid"]
alloc = []
default = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
